fix(TableTab): improve layout on small device

--- a/src/css/NewItemButton.scss
+++ b/src/css/NewItemButton.scss
@@ -3,6 +3,7 @@
 .NewItemButton {
     display: flex;
     align-items: center;
+    white-space: nowrap;
 
     &::before {
         content: "";
